# kaggle_pingti_lerobot

./: .gitignore  1.21.0  README.md  install_sim_only.sh  pyproject.toml  requirements_sim_only.txt  simple_sim_demo.py  test_sim_quick.py
.cache/calibration/lekiwi/: main_follower.json  main_leader.json
.cache/calibration/nong_bot/: left_follower.json  left_leader.json  main_follower.json  main_leader.json  right_follower.json  right_leader.json
.cache/calibration/pingti/: main_follower.json  main_follower_first.json  main_leader.json  main_leader_first.json
docs/: data_record_guide.md  pingti_lerobot_bridge_tutorial.md
lerobot_robot_pingti/: __init__.py
pingti/models/: pingti_simple.xml
pingti/robots/: __init__.py  utils.py
pingti/robots/bi_pingti_follower/: __init__.py  bi_pingti_follower.py  config_bi_pingti_follower.py
pingti/robots/pingti_follower/: __init__.py  config_pingti_follower.py  mujoco_sim.py  pingti_follower.py
pingti/scripts/benchmark/: BENCHMARK_README.md  BENCHMARK_README_CN.md  simple_benchmark.py  verify_benchmark_setup.py
pingti/scripts/lerobot_dataset_fps_converter/: FPS_CONVERTER_README_CN.md  FPS_CONVERTER_README_EN.md  lerobot_fps_converter.py
pingti/scripts/server/: constants.py  pingti_robot_client.py
pingti/utils/: ACTION_FILTERING_README.md  action_filters.py
tests/: test_bi_pingti_follower.py  test_pingti_follower.py
tests/utils/: test_action_filters.py
