[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pingti"
version = "0.1.0"
description = "PingTi Robot Configuration"
authors = [
    { name = "Wang Zhenxuan", email = "nomorewzx@163.com" },
]

license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "lerobot[feetech]",
    "joycon-python",
    "hidapi",
    "pyglm"
]

[tool.setuptools]
packages = [
    "pingti",
    "pingti.robots",
    "pingti.robots.pingti_follower",
    "pingti.robots.bi_pingti_follower",
    "pingti.robots.action_filters",
    "pingti.utils",
    "lerobot_robot_pingti",
]
